Latest version of firmware before changing WiFiConnection class

--- a/T5Firmware/.vscode/settings.json
+++ b/T5Firmware/.vscode/settings.json
@@ -41,6 +41,8 @@
         "utility": "cpp",
         "typeinfo": "cpp",
         "string": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "string_view": "cpp",
+        "iostream": "cpp"
     }
 }
