--- a/T5Firmware/platformio.ini
+++ b/T5Firmware/platformio.ini
@@ -20,3 +20,6 @@ lib_deps =
 	adafruit/Adafruit BME280 Library@^2.2.2
 	adafruit/Adafruit TSL2591 Library@^1.4.2
 	adafruit/Adafruit Unified Sensor@^1.1.4
+	paulstoffregen/OneWire@^2.3.6
+	milesburton/DallasTemperature@^3.9.1
+	lennarthennigs/Button2@1.6.2
